# ArduSub_PyMavlinkDemo

./: Dockerfile  README.md  build.sh  docker-compose.yml
.github/workflows/: deploy.yml
app/: main.py  pyproject.toml  requirements.txt  test_mavlink.py
app/static/: index.html
