[project]
name = "ardusub-pymavlink-control"
version = "0.0.1"
description = "BlueOS ArduSub PyMavlink Control Extension"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "pymavlink",
    "requests",
    "flask-cors",
]

